[package]
name = "omvector"
version = "0.1.0"
authors = ["Ken Zhang <kkrazy0630@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#use jemallocator to alloc memory for vec through jni need disable_initial_exe_tls
#default = ["disable_initial_exec_tls"]
#disable_initial_exec_tls=["jemallocator/disable_initial_exec_tls"]

[dependencies]
jni = "0.18.0"
rand = "0.8.2"
cached = "0.23.0"
lazy_static = "1.4.0"
chashmap = "2.2.2"
time = "0.1.44"
libc = "0.2"
once_cell = "1.5.2"
log = "*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
llvm-sys = "110.0.0"
regex = "1.4.5"

[lib]
crate_type = ["cdylib"]

[profile.release]
debug = true
